--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,1 @@
-<p class="text-muted credit">Copyright © 1993-{{site.time | date: "%Y"}} Eltrans Ltd. All Rights Reserved.<script type="text/javascript" src="/js/orphus.js"></script>
-<a href="http://orphus.ru" id="orphus" target="_blank"><img alt="Orphus system" src="/images/orphus.gif" border="0" width="80" height="15" /></a></p>
-
-
-     
+<div id="bottom">Copyright © 1993-2006 Eltrans. All Rights Reserved.</div>
