--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,30 +1,21 @@
+---
+layout: compress
+---
 <!DOCTYPE html>
-<html>
-	<head>
-		{% include head.html %}
-	</head>	
-	<body>
-          <div id="wrap">
-            <div class="container">
-                {% include header.html %}
-            </div>
-              <div class="navbar navbar-default navbar-fixed-top">
-                <div class="container">
-                {% include nav.html %}
-                </div>
-              </div> 
-            <div class="container">   
-      		<section id="main_content" class="inner">
-				<h1>{{ page.title }}</h1>
-		 			{{ content }}
-	        </section>
-            </div>
-    	</div>
-        <div id="footer">
-          <div class="container">
-		 {% include footer.html %}
-          </div>
-        </div>
-                 {% include scripts.html %}
-	</body>
+<html lang="{{ page.lang | default: site.lang | default: "ru" }}">
+<head>
+{% include head.html %}
+</head>	
+<body>
+{% include layout.html %}
+{% include contacts.html %}
+{% include mainmenu.html %}
+{% include counters.html %}
+<div id="mb">
+<h1>{{ page.title | default: site.title }}</h1>
+{{ content }}
+</div>
+{% include leftmenu.html %}
+{% include footer.html %}
+</body>
 </html>
