--- a/_includes/counters.html
+++ b/_includes/counters.html
@@ -1,5 +1,4 @@
-<div id="counters_wrap" class="outer">
-<div id="mailru" class="counter">
+<div id="mailru">
 <!--Rating@Mail.ru COUNTER-->
 <script language="JavaScript" type="text/javascript"><!--
 d=document;var a='';a+=';r='+escape(d.referrer)
@@ -26,7 +25,7 @@ border=0 height=18 width=88
 alt="Рейтинг@Mail.ru"/></a>
 <!--/LOGO-->
 </div>
-<div id="rambler" class="counter">
+<div id="rambler">
 <!--begin of Rambler's Top100 code -->
 <a href="http://top100.rambler.ru/top100/">
 <img src="http://counter.rambler.ru/top100.cnt?952788" alt="" width=1 height=1 border=0></a>
@@ -36,7 +35,7 @@ alt="Рейтинг@Mail.ru"/></a>
 <img src="http://top100-images.rambler.ru/top100/w7.gif" alt="Rambler's Top100" width=88 height=31 border=0></a>
 <!--end of Top100 logo -->
 </div>
-<div id="hotlog" class="counter">
+<div id="hotlog">
 <!-- HotLog -->
 
 <script type="text/javascript" language="javascript">
@@ -66,5 +65,4 @@ hotlog_r+"&' border=0 width=88 height=31 alt=HotLog><\/a>")
 </noscript>
 
 <!-- /HotLog -->
-</div>
 </div>
