--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,4 @@
 <meta charset="utf-8" />
 <title>{% if page.title %}{{ page.title | escape }} | {% endif %}{{ site.title | escape }}</title>
 <link rel="stylesheet" type="text/css" href="{{ "/css/main.css" | relative_url }}" />
-<link rel="icon" href="{{ "/icon.png" | relative_url }}" type="image/gif" />
+<link rel="icon" href="{{ "/images/icon.png" | relative_url }}" type="image/gif" />
