--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -11,5 +11,6 @@
   <a href="{{ "/en/" | relative_url }}"><img src="{{ "/images/en.gif" | relative_url }}" width="40" height="20" /><br />English</a>
 {%- else -%}
   <a href="{{ "/" | relative_url }}"><img src="{{ "/images/ru.gif" | relative_url }}" width="40" height="20" /><br />Russian</a>
+{%- endif -%}
 </div>
 <div id="head"><img width=745 height=177 src="{{ "/images/eltrans.jpg" | relative_url }}"></div>
