--- a/_includes/mainmenu.html
+++ b/_includes/mainmenu.html
@@ -2,7 +2,7 @@
   {% if page.lang == "ru" -%}
   <a href="{{ "/" | relative_url }}">Главная</a>&nbsp;&nbsp;  |&nbsp;&nbsp; <a href="{{ "/about" | relative_url }}">О
   нас</a>&nbsp;&nbsp; |&nbsp;&nbsp; <a href="{{ "/products" | relative_url }}">Услуги</a>&nbsp;  |&nbsp; <a href="{{ "/service" | relative_url }}">Обслуживание</a>&nbsp;|&nbsp;&nbsp; <a href="{{ "/contacts" | relative_url }}">Контакты</a>
-  {% else %}
+  {% else -%}
   <a href="{{ "/en/" | relative_url }}">Home</a>&nbsp;&nbsp;  |&nbsp;&nbsp; <a href="{{ "/en/about" | relative_url }}">About
   us</a>&nbsp;&nbsp; |&nbsp;&nbsp; <a href="{{ "/en/products" | relative_url }}">Services</a>&nbsp; |&nbsp;&nbsp; <a 
   href="{{ "/en/service" | relative_url }}">Maintenance</a>&nbsp; |&nbsp;&nbsp; <a href="{{ "/en/contacts" | relative_url }}">Contacts</a>
