--- a/_includes/leftmenu.html
+++ b/_includes/leftmenu.html
@@ -1,15 +1,31 @@
 <div id="lm">
+{%- if page.lang == "ru" -%}
 У нас на сайте:
 <ul>
-  <li><a href="news.html">Новости</a></li>
-  <li><a href="products.html">Услуги</a></li>
+  <li><a href="{{ "/" | relative_url }}">Новости</a></li>
+  <li><a href="{{ "/products" | relative_url }}">Услуги</a></li>
   <ul>
-    <li><a href="products1.html">Береговые системы</a></li>
-    <li><a href="products2.html">Судовое оборудование</a></li>
-    <li><a href="products3.html">Тренажерные системы</a></li>
+    <li><a href="{{ "/products1" | relative_url }}">Береговые системы</a></li>
+    <li><a href="{{ "/products2" | relative_url }}">Судовое оборудование</a></li>
+    <li><a href="{{ "/products3" | relative_url }}">Тренажерные системы</a></li>
   </ul>
-  <li><a href="certificates.html">Сертификаты</a></li>
-  <li><a href="customers.html">Клиенты</a></li>
-  <li><a href="stuff.html">Руководство</a></li>
+  <li><a href="{{ "/certificates" | relative_url }}">Сертификаты</a></li>
+  <li><a href="{{ "/customers" | relative_url }}">Клиенты</a></li>
+  <li><a href="{{ "/stuff" | relative_url }}">Руководство</a></li>
 </ul>
+{%- else %}
+<br />
+<ul>
+  <li><a href="{{ "/en/" | relative_url }}">News</a></li>
+  <li><a href="{{ "/en/products" | relative_url }}">Services</a></li>
+  <ul>
+    <li><a href="{{ "/en/products1" | relative_url }}">Coastal Systems</a></li>
+    <li><a href="{{ "/en/products2" | relative_url }}">Shipboard equipment</a></li>
+    <li><a href="{{ "/en/products3" | relative_url }}">Simulators</a></li>
+  </ul>
+  <li><a href="{{ "/en/certificates" | relative_url }}">Certificates</a></li>
+  <li><a href="{{ "/en/customers" | relative_url }}">Customers</a></li>
+  <li><a href="{{ "/en/stuff" | relative_url }}">Leaders</a></li>
+</ul>
+{% endif -%}
 </div>
