--- a/_includes/leftmenu.html
+++ b/_includes/leftmenu.html
@@ -3,11 +3,11 @@
 У нас на сайте:
 <ul>
   <li><a href="{{ "/" | relative_url }}">Новости</a></li>
-  <li><a href="{{ "/products" | relative_url }}">Услуги</a></li>
+  <li><a href="{{ "/services" | relative_url }}">Услуги</a></li>
   <ul>
-    <li><a href="{{ "/products1" | relative_url }}">Береговые системы</a></li>
-    <li><a href="{{ "/products2" | relative_url }}">Судовое оборудование</a></li>
-    <li><a href="{{ "/products3" | relative_url }}">Тренажерные системы</a></li>
+    <li><a href="{{ "/service1" | relative_url }}">Береговые системы</a></li>
+    <li><a href="{{ "/service2" | relative_url }}">Судовое оборудование</a></li>
+    <li><a href="{{ "/service3" | relative_url }}">Тренажерные системы</a></li>
   </ul>
   <li><a href="{{ "/certificates" | relative_url }}">Сертификаты</a></li>
   <li><a href="{{ "/customers" | relative_url }}">Клиенты</a></li>
@@ -17,11 +17,11 @@
 <br />
 <ul>
   <li><a href="{{ "/en/" | relative_url }}">News</a></li>
-  <li><a href="{{ "/en/products" | relative_url }}">Services</a></li>
+  <li><a href="{{ "/en/services" | relative_url }}">Services</a></li>
   <ul>
-    <li><a href="{{ "/en/products1" | relative_url }}">Coastal Systems</a></li>
-    <li><a href="{{ "/en/products2" | relative_url }}">Shipboard equipment</a></li>
-    <li><a href="{{ "/en/products3" | relative_url }}">Simulators</a></li>
+    <li><a href="{{ "/en/service1" | relative_url }}">Coastal Systems</a></li>
+    <li><a href="{{ "/en/service2" | relative_url }}">Shipboard equipment</a></li>
+    <li><a href="{{ "/en/service3" | relative_url }}">Simulators</a></li>
   </ul>
   <li><a href="{{ "/en/certificates" | relative_url }}">Certificates</a></li>
   <li><a href="{{ "/en/customers" | relative_url }}">Customers</a></li>
