--- a/css/main.scss
+++ b/css/main.scss
@@ -394,4 +394,8 @@ td a {
 
 .news h3 > a {
   text-decoration: none;
+  font-size: 12px;
+  font-family: Arial;
+  font-weight: bold;
+  color: #666699;
 }
