--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -1,16 +1,16 @@
-<div id="p0"><img width="28" height="47" src="{{ "/images/topmenu_img1.gif" | relative_url }}" /></div>
-<div id="p1"><img width="187" height="85" src="{{ "/images/users_feedback_bg.gif" | relative_url }}" /></div>
-<div id="p2"><img width="187" height="47" src="{{ "/images/users_feedback_s.gif" | relative_url }}" /></div>
-<div id="p3"><img width="533" height="47" src="{{ "/images/products_b.gif" | relative_url }}" /></div>
-<div id="p4"><img width="187" height="47" src="{{ "/images/bot1.gif" | relative_url }}" /></div>
-<div id="p5"><img width="28" height="47" src="{{ "/images/bot2.gif" | relative_url }}" /></div>
-<div id="p6"><img width="536" height="47" src="{{ "/images/botmenu_bg.gif" | relative_url }}" /></div>
+<div id="p0"><img width="28" height="47" src="{{ "/images/topmenu_img1.gif" | relative_url }}"></div>
+<div id="p1"><img width="187" height="85" src="{{ "/images/users_feedback_bg.gif" | relative_url }}"></div>
+<div id="p2"><img width="187" height="47" src="{{ "/images/users_feedback_s.gif" | relative_url }}"></div>
+<div id="p3"><img width="533" height="47" src="{{ "/images/products_b.gif" | relative_url }}"></div>
+<div id="p4"><img width="187" height="47" src="{{ "/images/bot1.gif" | relative_url }}"></div>
+<div id="p5"><img width="28" height="47" src="{{ "/images/bot2.gif" | relative_url }}"></div>
+<div id="p6"><img width="536" height="47" src="{{ "/images/botmenu_bg.gif" | relative_url }}"></div>
 <div id="p7"></div>
 <div id="la">
 {%- if page.lang == "ru" -%}
-  <a href="{{ "/en/" | relative_url }}"><img src="{{ "/images/en.gif" | relative_url }}" width="40" height="20" /><br />English</a>
+  <a href="{{ "/en/" | relative_url }}"><img src="{{ "/images/en.gif" | relative_url }}" width="40" height="20"><br>English</a>
 {%- else -%}
-  <a href="{{ "/" | relative_url }}"><img src="{{ "/images/ru.gif" | relative_url }}" width="40" height="20" /><br />Russian</a>
+  <a href="{{ "/" | relative_url }}"><img src="{{ "/images/ru.svg" | relative_url }}" width="40" height="20"><br>Russian</a>
 {%- endif -%}
 </div>
 <div id="head"><img width=745 height=177 src="{{ "/images/eltrans.jpg" | relative_url }}"></div>
