--- a/_includes/contacts.html
+++ b/_includes/contacts.html
@@ -1,4 +1,4 @@
-<div id="fu3"><img src="{{ "/images/znak.gif" | relative_url }}" width="124" height="125" /></div>
+<div id="fu3"><img src="{{ "/images/znak.gif" | relative_url }}" width="124" height="125"></div>
 <div id="contacts">
 {% if page.lang == "ru" -%}
 <p>Ваши отзывы и предложения присылайте по адресу <a href="mailto:info@eltrans.ru">info@eltrans.ru</a></p><p>Контактную информацию
